<resources>
    <!--App-->
    <string name="app_name">BiBipHelp</string>
    <string name="app_location_permission">"Для корректної роботи додатку потрібний дозвіл геоданих"</string>

    <!--Labels-->
    <string name="label_categories">Оберіть категорії</string>
    <string name="label_close_event">Вирішили проблему?</string>
    <string name="label_details_event">Відгукнутися?</string>
    <string name="distance_km">~%1$s км</string>

    <!--Options-->
    <string name="close_option_success">Допомога отримана</string>
    <string name="close_option_self">Вирішив проблему сам</string>
    <string name="close_option_non_actual">Неактуально</string>

    <!--Buttons-->
    <string name="btn_publish">Опублікувати</string>

    <!--Errors-->
    <string name="error_common">Сталася помилка, спробуйте пізніше</string>

    <!--Help Form-->
    <string name="help_input_label">Опишіть проблему</string>
    <string name="help_input_label_empty">Поле обвязкове</string>
    <string name="help_input_large_text">Дуже довге повідомлення</string>

    <!--WaitHelpActivity-->
    <string name="wait_help_main_label">Ваша заявка отримана\nочікуйте на допомогу</string>
    <string name="wait_help_main_label_success">На вашу заявку\nвідгукнулися</string>
    <string name="wait_help_secondary_label">Очікуйте на допомогу або скасуйте заявку</string>
    <string name="wait_help_secondary_label_success">Ви можете відмовтеся від допомоги</string>
    <string name="wait_help_card_label">Відгукнулося</string>
    <string name="wait_help_close_btn_label">ЗАКРИТИ</string>

    <!--ConfirmedHelpActivity-->
    <string name="confirmed_help_main_label">Дякуюємо, що не байдужі!\n👍 👍 👍</string>
    <string name="confirmed_help_secondary_label">Ви можете відмовитись допомагати</string>
    <string name="confirmed_help_card_label">Відгукнулося</string>
    <string name="reject_help_btn">Скасувати</string>
    <string name="confirmed_help_event_closed">Прохання про допомогу закрито</string>
    <string name="confirmed_help_more_helpers_count">Число рятівників збільшилося +</string>
    <string name="confirmed_help_less_helpers_count">Число рятівників зменшилося -</string>

    <!--OnBoarding-->
    <string name="onBoarding_title_1">Світ добрих людей</string>
    <string name="onBoarding_description_1">Уяви собі світ, в кожному куточку якого у тебе є друг</string>

    <string name="onBoarding_title_2">Герої всюди</string>
    <string name="onBoarding_description_2">Світ, в якому кожен готовий відгукнутися на прохання один одного в будь-яку хвилину</string>

    <string name="onBoarding_title_3">Ласкаво просимо в bibipHelp</string>
    <string name="onBoarding_description_3">Цей доброзичливий світ - реальність. Ставай частиною bibipHelp і відчуй силу людської доброти!</string>

    <string name="onBoarding_finish_btn">Розпочати</string>
    <string name="main_help_btn">Допомогти</string>
    <string name="main_ask_help_btn">Потрібна допомога</string>


    <string name="toolbar_list_action">Список</string>

    <string name="user_name">User name</string>
    <string name="map">Карта</string>

    <string name="srun_out_of_fuel">Закінчилось паливо</string>
    <string name="sheel_replacement">Заміна колеса</string>
    <string name="slow_battery">Розряджений акумулятор</string>
    <string name="sstuck_in_the_snow">Застряг у снігу</string>
    <string name="stowing">Буксируванян</string>
    <string name="sother">Інше</string>
    <string name="example">2.	Добавьте свой закрытый ключ SSH в ssh-agent. Если вы создали свой ключ с другим именем или добавляете
        существующий ключ с другим именем, замените в команде id_rsa на имя вашего файла закрытого ключа</string>
    <string name="help">Допомогти</string>

    <string name="wanna_reject_help">Ви хочете"\n"скасувати допомогу?</string>
    <string name="reject_help">Відмінити допомогу</string>
    <string name="no">НІ</string>
    <string name="yes">ТАК</string>
</resources>
