<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/recycler_background"
    android:clipChildren="true"
    tools:context=".activities.WaitHelpActivity">

    <ImageView
        android:id="@+id/waitMainImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/help_request_placeholder" />

    <TextView
        android:id="@+id/waitMainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="8sp"
        android:text="@string/wait_help_main_label"
        android:textColor="#272727"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/waitMainImg" />

    <TextView
        android:id="@+id/waitSecondaryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/wait_help_secondary_label"
        android:textColor="#272727"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/waitMainTitle" />

    <Button
        android:id="@+id/closeEventBtn"
        style="@style/PrimaryBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/wait_help_close_btn_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        app:cardCornerRadius="4dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/closeEventBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/waitSecondaryTitle">

        <LinearLayout
            android:id="@+id/waitLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="#fff"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingTop="24dp"
            android:paddingEnd="8dp"
            android:paddingBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/closeEventBtn"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_vertical"
            app:layout_constraintStart_toStartOf="parent">
            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wait_help_card_label" />

            <ImageView
                android:id="@+id/profileIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="8dp"
                app:srcCompat="@drawable/profile" />
            <TextView
                android:id="@+id/helpersCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <include layout="@layout/progress_bar" android:id="@+id/progressBar" />

</androidx.constraintlayout.widget.ConstraintLayout>